objects/Fab_Cycle_Time_Table__c.object
<CustomObject>
    <description>This is the table used to publish and look up the Fab days per mask layers.</description>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>Date the DPML Table will be Active as long as the publish flag is true. It will continue to be active until expiration date or until the publish flag is false.</description>
        <inlineHelpText>Date the DPML Table will be Active as long as the publish flag is true. It will continue to be active until expiration date or until the publish flag is false..</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>It is used along with the Publish Check box that review the owners intent as well as the Activation and Expiration window to Determine the DPML Line Item is Active or Not.</description>
        <formula>IF((TODAY()&gt; Activation_Date__c) &amp;&amp; (TODAY () &lt;=  Expiration_Date__c ) &amp;&amp;  (Publish__c = true), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It is used along with the Publish Check box that review the owners intent as well as the Activation and Expiration window to Determine the DPML Line Item is Active or Not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_for_Customer_Service_Level__c</fullName>
        <description>DPML based upon Service Level with the customer tier.</description>
        <inlineHelpText>DPML based upon Service Level with the customer tier.</inlineHelpText>
        <label>Applicable for Customer Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>SL1</fullName>
                </value>
                <value>
                    <fullName>SL2</fullName>
                </value>
                <value>
                    <fullName>SL3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPML_Bullet_Cycle_Full_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Bullet/Rocket Cycle Full Lot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Bullet_Cycle_Half_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Bullet/Rocket Cycle Half Lot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Hand_Carry_Cycle_Full_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Hand Carry/Super Rocket Cycle Full</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Hand_Carry_Cycle_Half_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Hand Carry/Super Rocket Cycle Half</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Hot_Cycle_Full_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Hot Cycle Full Lot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Hot_Cycle_Half_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Hot Cycle Half Lot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Standard_Cycle_Full_Lot__c</fullName>
        <description>DPML for a Standard Cycle Time</description>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Standard Cycle Full Lot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPML_Standard_Cycle_Half_Lot__c</fullName>
        <inlineHelpText>Half Lot is wafer quantities of 0 to 12 wafers. Full Lot is wafer quantities of 13 to 25 wafers.</inlineHelpText>
        <label>DPML Standard Cycle Half Lot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Quarter__c</fullName>
        <description>The quarter that this particular DPML Table will be in effect.</description>
        <inlineHelpText>The quarter that this particular DPML Table will be in effect.</inlineHelpText>
        <label>Effective Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013Q1</fullName>
                </value>
                <value>
                    <fullName>2013Q2</fullName>
                </value>
                <value>
                    <fullName>2013Q3</fullName>
                </value>
                <value>
                    <fullName>2013Q4</fullName>
                </value>
                <value>
                    <fullName>2014Q1</fullName>
                </value>
                <value>
                    <fullName>2014Q2</fullName>
                </value>
                <value>
                    <fullName>2014Q3</fullName>
                </value>
                <value>
                    <fullName>2014Q4</fullName>
                </value>
                <value>
                    <fullName>2015Q1</fullName>
                </value>
                <value>
                    <fullName>2015Q2</fullName>
                </value>
                <value>
                    <fullName>2015Q3</fullName>
                </value>
                <value>
                    <fullName>2015Q4</fullName>
                </value>
                <value>
                    <fullName>2016Q1</fullName>
                </value>
                <value>
                    <fullName>2016Q2</fullName>
                </value>
                <value>
                    <fullName>2016Q3</fullName>
                </value>
                <value>
                    <fullName>2016Q4</fullName>
                </value>
                <value>
                    <fullName>2017Q1</fullName>
                </value>
                <value>
                    <fullName>2017Q2</fullName>
                </value>
                <value>
                    <fullName>2017Q3</fullName>
                </value>
                <value>
                    <fullName>2017Q4</fullName>
                </value>
                <value>
                    <fullName>2018Q1</fullName>
                </value>
                <value>
                    <fullName>2018Q2</fullName>
                </value>
                <value>
                    <fullName>2018Q3</fullName>
                </value>
                <value>
                    <fullName>2018Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date the DPML Table Expires</description>
        <inlineHelpText>Date the DPML Table Expires</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <description>The Fab that this DPML Table is applicable.</description>
        <inlineHelpText>The Fab that this DPML Table is applicable.</inlineHelpText>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 235</fullName>
                </value>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <inlineHelpText>Process Geometry</inlineHelpText>
        <label>Geometry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.010UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.090UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.152UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
                <value>
                    <fullName>0.45UM</fullName>
                </value>
                <value>
                    <fullName>0.50UM</fullName>
                </value>
                <value>
                    <fullName>0.60UM</fullName>
                </value>
                <value>
                    <fullName>0.70UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Manual instruction to Publish the Field. It is used along with the Active Check box that review the owners intent as well as the Activation and Expiration window.</description>
        <inlineHelpText>Manual instruction to Publish the Field. It is used along with the Active Check box that review the owners intent as well as the Activation and Expiration window.</inlineHelpText>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_Type__c</fullName>
        <description>Technology Types that will affect the DPML. Not all process Tech Types will be indicated, but only the ones affecting the DPML.</description>
        <inlineHelpText>Technology Types that will affect the DPML. Not all process Tech Types will be indicated, but only the ones affecting the DPML.</inlineHelpText>
        <label>Technology Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AntiFuse</fullName>
                </value>
                <value>
                    <fullName>BiCMOS</fullName>
                </value>
                <value>
                    <fullName>BiPolar</fullName>
                </value>
                <value>
                    <fullName>CMOS</fullName>
                </value>
                <value>
                    <fullName>eDRAM</fullName>
                </value>
                <value>
                    <fullName>EEPROM</fullName>
                </value>
                <value>
                    <fullName>High Voltage</fullName>
                </value>
                <value>
                    <fullName>MEM</fullName>
                </value>
                <value>
                    <fullName>MOSFET</fullName>
                </value>
                <value>
                    <fullName>OTP</fullName>
                </value>
                <value>
                    <fullName>RFCMOS</fullName>
                </value>
                <value>
                    <fullName>SIGE</fullName>
                </value>
                <value>
                    <fullName>SOI</fullName>
                </value>
                <value>
                    <fullName>SRAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueField__c</fullName>
        <description>Hidden field for maintaining unique records for the cobination of FAB + Geometry + Technology Type</description>
        <label>UniqueField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fab Cycle Time Table</label>
    <listViews>
        <fullName>All_Fab_Cycle_Times</fullName>
        <columns>NAME</columns>
        <columns>Fab__c</columns>
        <columns>Geometry__c</columns>
        <columns>Technology_Type__c</columns>
        <columns>Effective_Quarter__c</columns>
        <columns>DPML_Bullet_Cycle_Full_Lot__c</columns>
        <columns>DPML_Bullet_Cycle_Half_Lot__c</columns>
        <columns>DPML_Hand_Carry_Cycle_Full_Lot__c</columns>
        <columns>DPML_Hand_Carry_Cycle_Half_Lot__c</columns>
        <columns>DPML_Hot_Cycle_Full_Lot__c</columns>
        <columns>DPML_Hot_Cycle_Half_Lot__c</columns>
        <columns>DPML_Standard_Cycle_Full_Lot__c</columns>
        <columns>DPML_Standard_Cycle_Half_Lot__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fab Cycle Times</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Fab_Cycle_Times2</fullName>
        <columns>NAME</columns>
        <columns>Fab__c</columns>
        <columns>Geometry__c</columns>
        <columns>Technology_Type__c</columns>
        <columns>DPML_Standard_Cycle_Full_Lot__c</columns>
        <columns>DPML_Standard_Cycle_Half_Lot__c</columns>
        <columns>Effective_Quarter__c</columns>
        <columns>DPML_Bullet_Cycle_Full_Lot__c</columns>
        <columns>DPML_Bullet_Cycle_Half_Lot__c</columns>
        <columns>DPML_Hand_Carry_Cycle_Full_Lot__c</columns>
        <columns>DPML_Hand_Carry_Cycle_Half_Lot__c</columns>
        <columns>DPML_Hot_Cycle_Full_Lot__c</columns>
        <columns>DPML_Hot_Cycle_Half_Lot__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fab Cycle Times2</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FCT-{00000000}</displayFormat>
        <label>Fab Cycle Time Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fab Cycle Time Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>